# LogoRec_linux

./: README
conf/: conf.txt  lg.txt  ll.txt  logolist.txt  md.txt  newVocal.txt  qset.txt  testset.txt  tr.txt  tr1.txt  tr2.txt  visual_vocabulary.txt  vv.txt
log/: LOGO_LOG.txt  LOGO_LOG_RT.txt  cl.sh
log/bak/: LOGO_LOG.txt  LOGO_LOG_RT.txt
model/: HP_EDGE_INDEX.txt  HP_TRI_INDEX.txt  adidas_EDGE_INDEX.txt  adidas_TRI_INDEX.txt  aldi_EDGE_INDEX.txt  aldi_TRI_INDEX.txt  apple_EDGE_INDEX.txt  apple_TRI_INDEX.txt  becks_EDGE_INDEX.txt  becks_TRI_INDEX.txt  bmw_EDGE_INDEX.txt  bmw_TRI_INDEX.txt  carlsberg_EDGE_INDEX.txt  carlsberg_TRI_INDEX.txt  chimay_EDGE_INDEX.txt  chimay_TRI_INDEX.txt  cl.sh  cocacola_EDGE_INDEX.txt  cocacola_TRI_INDEX.txt  corona_EDGE_INDEX.txt  corona_TRI_INDEX.txt  dhl_EDGE_INDEX.txt  dhl_TRI_INDEX.txt  erdinger_EDGE_INDEX.txt  erdinger_TRI_INDEX.txt  esso_EDGE_INDEX.txt  esso_TRI_INDEX.txt  fedex_EDGE_INDEX.txt  fedex_TRI_INDEX.txt  ferrari_EDGE_INDEX.txt  ferrari_TRI_INDEX.txt  ford_EDGE_INDEX.txt  ford_TRI_INDEX.txt  fosters_EDGE_INDEX.txt  fosters_TRI_INDEX.txt  google_EDGE_INDEX.txt  google_TRI_INDEX.txt  guiness_EDGE_INDEX.txt  guiness_TRI_INDEX.txt  heineken_EDGE_INDEX.txt  (+26 more)
model/bak/: aldi_EDGE_INDEX.txt  aldi_TRI_INDEX.txt  apple_EDGE_INDEX.txt  apple_TRI_INDEX.txt  (+23 more)
src/: 2  CMakeLists.txt  Logo_Base.hpp  Logo_Common.cpp  Logo_Common.hpp  Logo_Core.cpp  Logo_Core.hpp  Logo_Logger.cpp  Logo_Logger.hpp  Logo_Logger1.cpp  Logo_Precomp.hpp  Logo_Random.hpp  Logo_Types.hpp  Logo_Utils.cpp  Logo_Utils.hpp  Logo_main.cpp  dl.sh  mk.sh
